--- a/IPSX/Flows/Funds/Storyboard/Withdrawal.storyboard
+++ b/IPSX/Flows/Funds/Storyboard/Withdrawal.storyboard
@@ -83,7 +83,7 @@
                                                     <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="walletDeposit" translatesAutoresizingMaskIntoConstraints="NO" id="bbK-Nz-ty8">
+                                                <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="walletWidthdrawals" translatesAutoresizingMaskIntoConstraints="NO" id="bbK-Nz-ty8">
                                                     <rect key="frame" x="18" y="18" width="30" height="30"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                                     <color key="tintColor" red="0.1647058824" green="0.67500001190000003" blue="0.87800002099999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -934,7 +934,7 @@
         <image name="Wallet" width="25.666666030883789" height="26"/>
         <image name="ipsxIcon" width="16" height="16"/>
         <image name="locked" width="12.333333015441895" height="16"/>
-        <image name="walletDeposit" width="30" height="38"/>
         <image name="walletLarge" width="51" height="51.666667938232422"/>
+        <image name="walletWidthdrawals" width="30" height="38"/>
     </resources>
 </document>
