Update Landing UI + Login & Register button styles according to design

--- a/IPSX/Storyboard/Base.lproj/Landing.storyboard
+++ b/IPSX/Storyboard/Base.lproj/Landing.storyboard
@@ -29,28 +29,8 @@
                                 </constraints>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MRN-Ud-kuM" userLabel="BottomView">
-                                <rect key="frame" x="0.0" y="615" width="375" height="163"/>
+                                <rect key="frame" x="0.0" y="520" width="375" height="278"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ugu-Hv-Kee" customClass="RoundedButton" customModule="IPSX" customModuleProvider="target">
-                                        <rect key="frame" x="45.666666666666657" y="54" width="284" height="44"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="44" id="aEZ-8f-FkF"/>
-                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="284" id="oX5-Nh-08q"/>
-                                        </constraints>
-                                        <state key="normal" title="Login">
-                                            <color key="titleColor" red="0.16862745098039217" green="0.51372549019607838" blue="0.65490196078431373" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        </state>
-                                        <userDefinedRuntimeAttributes>
-                                            <userDefinedRuntimeAttribute type="boolean" keyPath="border" value="YES"/>
-                                            <userDefinedRuntimeAttribute type="boolean" keyPath="shadow" value="NO"/>
-                                            <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
-                                                <color key="value" red="0.16862745100000001" green="0.51372549020000002" blue="0.65499997139999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                            </userDefinedRuntimeAttribute>
-                                        </userDefinedRuntimeAttributes>
-                                        <connections>
-                                            <segue destination="uCg-Ke-ahv" kind="show" id="WWb-sk-1Il"/>
-                                        </connections>
-                                    </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kCB-he-W31" customClass="RoundedButton" customModule="IPSX" customModuleProvider="target">
                                         <rect key="frame" x="45.666666666666657" y="0.0" width="284" height="44"/>
                                         <color key="backgroundColor" red="0.1647058824" green="0.67450980390000004" blue="0.87843137250000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -68,14 +48,65 @@
                                             <segue destination="4bR-u2-yCH" kind="show" id="mhL-iD-cRf"/>
                                         </connections>
                                     </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ugu-Hv-Kee" customClass="RoundedButton" customModule="IPSX" customModuleProvider="target">
+                                        <rect key="frame" x="45.666666666666657" y="54" width="284" height="44"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="44" id="aEZ-8f-FkF"/>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="284" id="oX5-Nh-08q"/>
+                                        </constraints>
+                                        <state key="normal" title="Login">
+                                            <color key="titleColor" red="0.16862745098039217" green="0.51372549019607838" blue="0.65490196078431373" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="boolean" keyPath="border" value="NO"/>
+                                            <userDefinedRuntimeAttribute type="boolean" keyPath="shadow" value="YES"/>
+                                            <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                                <color key="value" red="0.16862745100000001" green="0.51372549020000002" blue="0.65499997139999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <segue destination="uCg-Ke-ahv" kind="show" id="WWb-sk-1Il"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZZ7-Ir-bER" customClass="RoundedButton" customModule="IPSX" customModuleProvider="target">
+                                        <rect key="frame" x="45.666666666666657" y="138" width="284" height="44"/>
+                                        <color key="backgroundColor" red="0.24705882352941178" green="0.38039215686274508" blue="0.43529411764705883" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="284" id="fXP-Cz-5Ym"/>
+                                            <constraint firstAttribute="height" constant="44" id="muD-Kg-RcM"/>
+                                        </constraints>
+                                        <state key="normal" title="View our Marketplace">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="boolean" keyPath="border" value="NO"/>
+                                            <userDefinedRuntimeAttribute type="boolean" keyPath="shadow" value="YES"/>
+                                            <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                                <color key="value" red="0.16862745100000001" green="0.51372549020000002" blue="0.65499997139999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                    </button>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3qc-7n-QQI">
+                                        <rect key="frame" x="69.666666666666671" y="152" width="16" height="16"/>
+                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="16" id="av0-nt-9EH"/>
+                                            <constraint firstAttribute="width" constant="16" id="neP-mg-8IY"/>
+                                        </constraints>
+                                    </imageView>
                                 </subviews>
                                 <constraints>
                                     <constraint firstItem="kCB-he-W31" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="ugu-Hv-Kee" secondAttribute="trailing" id="4ld-6O-Wo7"/>
                                     <constraint firstItem="kCB-he-W31" firstAttribute="leading" secondItem="ugu-Hv-Kee" secondAttribute="leading" id="89B-iF-QvM"/>
-                                    <constraint firstAttribute="bottom" secondItem="ugu-Hv-Kee" secondAttribute="bottom" constant="65" id="MNm-yY-Rfx"/>
+                                    <constraint firstItem="ZZ7-Ir-bER" firstAttribute="top" secondItem="ugu-Hv-Kee" secondAttribute="bottom" constant="40" id="HBF-z1-c2L"/>
+                                    <constraint firstItem="ZZ7-Ir-bER" firstAttribute="centerX" secondItem="ugu-Hv-Kee" secondAttribute="centerX" id="IuH-qI-bPk"/>
+                                    <constraint firstAttribute="bottom" secondItem="ugu-Hv-Kee" secondAttribute="bottom" constant="180" id="MNm-yY-Rfx"/>
                                     <constraint firstItem="ugu-Hv-Kee" firstAttribute="centerX" secondItem="MRN-Ud-kuM" secondAttribute="centerX" id="ahN-Gd-OY7"/>
                                     <constraint firstItem="kCB-he-W31" firstAttribute="top" secondItem="MRN-Ud-kuM" secondAttribute="top" id="bF8-Yc-88R"/>
+                                    <constraint firstItem="3qc-7n-QQI" firstAttribute="centerY" secondItem="ZZ7-Ir-bER" secondAttribute="centerY" id="bZ0-P0-wcW"/>
                                     <constraint firstItem="ugu-Hv-Kee" firstAttribute="top" secondItem="kCB-he-W31" secondAttribute="bottom" constant="10" id="m4U-mV-tJO"/>
+                                    <constraint firstItem="3qc-7n-QQI" firstAttribute="leading" secondItem="ZZ7-Ir-bER" secondAttribute="leading" constant="24" id="wtg-mI-Hi1"/>
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome to" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gHa-Hj-Pph">
@@ -92,7 +123,7 @@
                             <constraint firstItem="MRN-Ud-kuM" firstAttribute="leading" secondItem="zTh-l3-rXH" secondAttribute="leading" id="U3a-c3-YLv"/>
                             <constraint firstItem="gHa-Hj-Pph" firstAttribute="centerX" secondItem="W2h-AD-74W" secondAttribute="centerX" id="bZ3-RJ-ffG"/>
                             <constraint firstItem="MRN-Ud-kuM" firstAttribute="trailing" secondItem="zTh-l3-rXH" secondAttribute="trailing" id="cGa-mP-DH2"/>
-                            <constraint firstItem="MRN-Ud-kuM" firstAttribute="bottom" secondItem="zTh-l3-rXH" secondAttribute="bottom" id="etg-Pm-lMQ"/>
+                            <constraint firstItem="MRN-Ud-kuM" firstAttribute="bottom" secondItem="zTh-l3-rXH" secondAttribute="bottom" constant="20" id="etg-Pm-lMQ"/>
                             <constraint firstItem="zTh-l3-rXH" firstAttribute="bottom" secondItem="lT4-1r-KeI" secondAttribute="bottom" id="gYA-wd-j1p"/>
                             <constraint firstItem="W2h-AD-74W" firstAttribute="centerX" secondItem="lPK-bp-Ngh" secondAttribute="centerX" id="i1l-Pi-Psn"/>
                             <constraint firstItem="W2h-AD-74W" firstAttribute="top" secondItem="gHa-Hj-Pph" secondAttribute="bottom" constant="8.5" id="nuX-vv-98f"/>
@@ -105,11 +136,12 @@
                         <outlet property="backgroundImageView" destination="lT4-1r-KeI" id="Ecl-5A-mdJ"/>
                         <outlet property="bottomView" destination="MRN-Ud-kuM" id="up9-Wv-GQ7"/>
                         <outlet property="labelTopConstraint" destination="B49-yZ-wpd" id="F6p-et-aX4"/>
+                        <outlet property="marketplaceImageView" destination="3qc-7n-QQI" id="7vd-ij-R4a"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="afi-c2-hPI" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="93.599999999999994" y="134.48275862068968"/>
+            <point key="canvasLocation" x="93.599999999999994" y="134.48275862068965"/>
         </scene>
         <!--Register-->
         <scene sceneID="6LT-lz-wRc">
