disable favorites & cart in Marketplace when the user is not logged in

--- a/IPSX/Storyboard/Base.lproj/Main.storyboard
+++ b/IPSX/Storyboard/Base.lproj/Main.storyboard
@@ -828,12 +828,14 @@
                     <navigationItem key="navigationItem" id="1lk-u5-yWs"/>
                     <connections>
                         <outlet property="cartCountLabel" destination="2pj-PB-74g" id="EI5-Nc-tAP"/>
+                        <outlet property="cartView" destination="kSy-pO-qmy" id="CLB-Y0-AqZ"/>
                         <outlet property="countryOverlayView" destination="2Xs-5a-Py6" id="gfW-UH-P3j"/>
                         <outlet property="countryRComponent" destination="wMJ-Xf-01h" id="FOh-8I-ddh"/>
                         <outlet property="countryViewYAxiscenter" destination="HE6-z5-Mzh" id="AQd-Ra-T2f"/>
                         <outlet property="customTabBar" destination="Zot-aD-WGB" id="Ust-cY-Pdv"/>
                         <outlet property="favoritesCounterLabel" destination="cvM-hA-32F" id="EHr-sO-bZj"/>
                         <outlet property="favoritesImageView" destination="NOc-sp-8G0" id="grJ-Pw-ZlC"/>
+                        <outlet property="favoritesView" destination="CZ0-Ke-saS" id="pSO-I1-HSY"/>
                         <outlet property="fetchPageFooterView" destination="9H8-MV-D8k" id="LfM-88-5ap"/>
                         <outlet property="fetchpageActivityIndicator" destination="ZXs-6x-BTc" id="rG4-RZ-1gM"/>
                         <outlet property="filtersCounterLabel" destination="XfL-VT-vgL" id="2kR-21-6FI"/>
